notification dropdown feature

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@ Homestead.json
 
 # Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
 .rocketeer/
+
+.md5
+.vscode
+.md
