--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,6 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/puffergroup/public_html/app
-    - /bin/cp -r * $DEPLOYPATH
+    - export DEPLOYPATH=/home/puffergroup/public_html
+    - /bin/cp -r devtemplate $DEPLOYPATH/app
+    - /bin/cp -r pgs $DEPLOYPATH/pgs
