--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,5 +2,5 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/puffergroup/public_html
-    - /bin/cp -r devtemplate $DEPLOYPATH/app
-    - /bin/cp -r pgs $DEPLOYPATH/pgs
+    - /bin/cp -r devtemplate/* "$DEPLOYPATH/app"
+    - /bin/cp -r pgs/* "$DEPLOYPATH/pgs"
